changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

CRE: display actual item values for artifacts, as suggested by Leaf.
Nicolas Weeger 2010-06-20

CRE: add 'exit' command, add status bar tips to menu commands.
Nicolas Weeger 2010-06-20

CRE: read comments from quest pre/post scripts, to display in the dropdown list.
Nicolas Weeger 2010-06-19

Add 'purge_quests' DM command to unload quest definition.
Useful when modifying quest files, to avoid restarting server.
Nicolas Weeger 2010-06-19

Remove unused variables.
Nicolas Weeger 2010-06-19

CRE: message rule duplication.
Nicolas Weeger 2010-06-19

Correctly mark quests as completed during state loading.
Nicolas Weeger 2010-06-19

Remove cf_darcap plugin, as everything is now done through Python scripts
and the quest system.
Nicolas Weeger 2010-06-19

CRE: enable step reordering.
Nicolas Weeger 2010-06-19

Fix suspicious (and duplicate) artifact change. Update documentation.
 common/artifact.h
 lib/artifacts
Nicolas Weeger 2010-06-13

CRE: display artifact values, as a dump for now.
Nicolas Weeger 2010-06-13

CRE: word wrap for messages.
Nicolas Weeger 2010-06-13

CRE: quest step description is multiline too, for edition.
Nicolas Weeger 2010-06-13

CRE: redesign the quest steps panel, to have inplace edition.
This gives a better overview of the steps.
Nicolas Weeger 2010-06-13

Make the plugin calls to player titles respect the custom titles the player
has set.
server/plugins.c, plugins/common, plugins/cfpython
Brendan Lally 2010-06-08

Expose one knowledge function to plugin.
Nicolas Weeger 2010-06-06

CRE: display alchemy's index.
Nicolas Weeger 2010-06-06
